Fix grid spacing

--- a/themes/ta-portfolio/src/scss/style.scss
+++ b/themes/ta-portfolio/src/scss/style.scss
@@ -83,9 +83,10 @@ main {
 
     h2 {
         font-weight: 400;
-        font-size: 1.4rem;
-        line-height: 1.5;
-        text-transform: uppercase;
+        font-size: 1.8rem;
+        line-height: 1.2;
+        margin-top: 20px;
+        //text-transform: uppercase;
         grid-column: #{$start-main} / #{$end-main};
     }
 
@@ -147,7 +148,7 @@ main {
 }
 
 #main-home {
-    grid-row-gap: 40px;
+    grid-row-gap: 20px;
     p {
         grid-column: #{$start-main} / #{$end-text + 1};
         z-index: 2;
@@ -265,9 +266,6 @@ main {
             left: 51%;
             top: 425px;
         }
-    }
-    .projects-overview.work-in-progress {
-        margin-top: -20px;
     }
 }
 
